src/objects/Prospects__c.object
<CustomObject>
    <fields>
        <fullName>Languages_Spoken_In_Addition_to_English__c</fullName>
        <description>Languages Spoken (In Addition to English</description>
        <inlineHelpText>Languages Spoken (In Addition to English</inlineHelpText>
        <label>Languages Spoken (In Addition to English</label>
        <picklist>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnamese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Please Specify</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Languages_Spoken_Others__c</fullName>
        <description>Languages Spoken - Others</description>
        <inlineHelpText>Languages Spoken - Others</inlineHelpText>
        <label>Languages Spoken - Others</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Inquiry_Comments__c</fullName>
        <inlineHelpText>If a prospect submits a web inquiry more than once their entries will be combined into one record to avoid duplicates.  Any additional details including any changes to their contact info will be displayed in this field.</inlineHelpText>
        <label>Multiple Inquiry Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes</description>
        <inlineHelpText>Use this field to make general notes on the prospect record.</inlineHelpText>
        <label>Recruiter Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notify_Manager_to_Approve__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to send a notification to the Approving Manager to review Prospect and set Final Review status to approved, pending or rejected.</inlineHelpText>
        <label>Notify Approving Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_days_since_last_activity__c</fullName>
        <formula>today() -   DATEVALUE( LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of days since last activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OIG_Results__c</fullName>
        <description>OIG Results</description>
        <inlineHelpText>Enter the results of the OIG check.</inlineHelpText>
        <label>OIG Results</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>On_Hold_Closed_Date__c</fullName>
        <formula>Closed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>On Hold / Closed Date</inlineHelpText>
        <label>On Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>On_Hold_Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Background check Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental requirements Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure to meet internal/Other requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inappropriate Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incompatible schedules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient financial returns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misunderstanding - Mentor role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect Family Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect relocated out of area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selected Other Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type of client Not available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Program_Interest__c</fullName>
        <inlineHelpText>Use this field to indicate a prospect&apos;s other program interests.  If a prospect initially requested a program that is not offered in your state mark that here.</inlineHelpText>
        <label>Other Program Interest</label>
        <picklist>
            <picklistValues>
                <fullName>ARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Reasons__c</fullName>
        <inlineHelpText>Please provide brief explanation if you’ve selected “other” as the reason for a Closed or On-Hold status.</inlineHelpText>
        <label>&quot;Other&quot; Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outreach_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ad Placement / Event Specifics</label>
        <referenceTo>Ad_Placement_Event_Specific__c</referenceTo>
        <relationshipLabel>Prospects</relationshipLabel>
        <relationshipName>Outreach_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outreach_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ad Campaign / Event Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.How_did_you_hear_about_us__c</field>
                <operation>equals</operation>
                <valueField>Media_Outlet__c.Type__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Media_Outlet__c</referenceTo>
        <relationshipLabel>Prospect Outreach Source</relationshipLabel>
        <relationshipName>Prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pet_Vaccination_and_Licenses_Date__c</fullName>
        <label>Pet Vaccination and Licenses Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pet_Vaccination_and_Licenses__c</fullName>
        <description>Pet Vaccination and Licenses</description>
        <inlineHelpText>Pet Vaccination and Licenses</inlineHelpText>
        <label>Pet Vaccination and Licenses</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Apply</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Physical_House_Inspection_Date__c</fullName>
        <label>Physical House Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Physical_House_Inspection__c</fullName>
        <description>Physical House Inspection</description>
        <inlineHelpText>Physical House Inspection</inlineHelpText>
        <label>Physical House Inspection</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pic_Stage__c</fullName>
        <formula>IF( CONTAINS(Text(Status__c),&quot;Closed&quot;),IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000002Nnt&quot;,&quot;pic&quot;,136,138),
IF( CONTAINS(Text(Status__c),&quot;On&quot;),IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000002Nny&quot;,&quot;pic&quot;,75,75), 
CASE(Text( Status__c ), 

&quot;30 day&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000002NnZ&quot;,&quot;pic&quot;,45,593),
&quot;7 Day&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000002NnU&quot;,&quot;pic&quot;,45,593),
&quot;Mentor&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000002No3&quot;,&quot;pic&quot;,45,593),
&quot;Review&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000002Nnj&quot;,&quot;pic&quot;,45,593),

 IF( Text(Application_Review_Status__c )=&quot;Approved&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000002Nno&quot;,&quot;pic&quot;,45,593), IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000002Nne&quot;,&quot;pic&quot;,45,593)) 
)

)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;div class=&quot;stage&quot; /&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pool_Water_Body_Assessment_Date__c</fullName>
        <label>Pool/Water Body Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pool_Water_Body_Assessment__c</fullName>
        <description>Pool/Water Body Assessment</description>
        <inlineHelpText>Pool/Water Body Assessment</inlineHelpText>
        <label>Pool/Water Body Assessment</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Apply</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Service_Comments__c</fullName>
        <description>Pre-Service Comments</description>
        <label>Pre-Service Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Pre_Service_Completed_Date__c</fullName>
        <description>Pre-Service Completed Date</description>
        <inlineHelpText>Enter the date this prospect completed pre-service.</inlineHelpText>
        <label>Pre-Service Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Service_Results__c</fullName>
        <description>Pre-Service Results</description>
        <inlineHelpText>Pre-Service Results</inlineHelpText>
        <label>Pre-Service Results</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Service_Started_Date__c</fullName>
        <description>Pre-Service Started Date</description>
        <inlineHelpText>Enter the date this prospect started pre-service.</inlineHelpText>
        <label>Pre-Service Started Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Agency_Comments__c</fullName>
        <description>Previous Agency Comments</description>
        <label>In-Home Care Experience Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Previous_Agency_References_Received_Date__c</fullName>
        <description>Previous Agency References Received Date</description>
        <inlineHelpText>Previous Agency References Received Date</inlineHelpText>
        <label>Previous Agency References Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Phone_Type__c</fullName>
        <description>Primary Phone Type</description>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <description>Primary Phone</description>
        <label>Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>Enter Program; IDD, or ARY (At Risk Youth), or Undecided</description>
        <inlineHelpText>Enter Program; IDD, ARY (At Risk Youth), or Undecided</inlineHelpText>
        <label>Program Type</label>
        <picklist>
            <picklistValues>
                <fullName>IDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undecided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prospect_Comments__c</fullName>
        <description>Entered by prospects on the web</description>
        <inlineHelpText>Entered by prospects on the web</inlineHelpText>
        <label>Prospect Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Agreement_Signature_Date__c</fullName>
        <inlineHelpText>Date prospect signs General Mentor Provider Agreement. Prospect may not sign until home has met all internal and external requirements and manager approves file and signs GMPA. Once signed, contract is in place and prospect is approved Mentor.</inlineHelpText>
        <label>Provider Agreement Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provider_Agreement_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field after the General Mentor Provider Agreement has been signed</inlineHelpText>
        <label>Provider Agreement Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <description>Race</description>
        <inlineHelpText>Race</inlineHelpText>
        <label>Race</label>
        <picklist>
            <picklistValues>
                <fullName>Not Specified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Indian or Alaska Native</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two or More Races</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>References_All_Other__c</fullName>
        <description>References (All Other)</description>
        <inlineHelpText>References (All Other)</inlineHelpText>
        <label>References (All Other)</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Apply</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>References_Date_All_Other__c</fullName>
        <label>References Date (All Other)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>References_Date_Primary__c</fullName>
        <label>References Date (Primary)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>References_Primary__c</fullName>
        <description>References (Primary)</description>
        <inlineHelpText>References (Primary)</inlineHelpText>
        <label>References (Primary)</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_Type__c</fullName>
        <label>Referral Type</label>
        <picklist>
            <picklistValues>
                <fullName>By Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>By Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>By Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReferredByEmail__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ReferredByFirst__c</fullName>
        <label>First</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferredByLast__c</fullName>
        <label>Last</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferredByMessage__c</fullName>
        <formula>&quot;If you select ‘referred by someone’, please enter contact information for the person who made the referral below.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;div/&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferredByPhone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Prospects</relationshipLabel>
        <relationshipName>Prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Status__c</fullName>
        <description>Relationship Status</description>
        <inlineHelpText>Relationship Status</inlineHelpText>
        <label>Relationship Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live-In Boy/Girfriend or Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_Comments__c</fullName>
        <label>Review Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Review_Inquiry__c</fullName>
        <formula>IF(ISNULL( First_Contact_Date__c ), zRedX__c, zGreenChk__c ) &amp; &quot; First Contact Attempt&quot; 
&amp; 
IF(ISBLANK( First_Contact_Attempt_Notes__c ), zRedX__c , zGreenChk__c ) &amp; &quot;First Contact Attempt Notes&quot; 
&amp; 
br() 
&amp; 
IF(ISNULL(Week_1_Follow_Up__c), zRedX__c , zGreenChk__c ) &amp; &quot;Week 1 Follow Up&quot; 
&amp; 
IF(ISBLANK(Week_1_Follow_Up_Notes__c), zRedX__c , zGreenChk__c ) &amp; &quot;Week 1 Notes&quot; 
&amp; 
br() 
&amp; 
IF(ISNULL( Week_2_Follow_Up__c), zRedX__c, zGreenChk__c ) &amp; &quot;Week 2 Follow Up&quot; 
&amp; 
IF(ISBLANK( Week_2_Follow_Up_Notes__c), zRedX__c, zGreenChk__c ) &amp; &quot;Week 2 Notes&quot; 
&amp; 
br() 
&amp; 
IF(ISNULL( Week_3_Follow_Up__c), zRedX__c, zGreenChk__c ) &amp; &quot;Week 3 Follow Up&quot; 
&amp; 
IF(ISBLANK(Week_3_Follow_Up_Notes__c), zRedX__c , zGreenChk__c ) &amp; &quot;Week 3 Notes&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inquiry Milestones</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Region_Program__c</fullName>
        <formula>IF(ISBLANK(  Region__c ),  zRedX__c &amp; &quot; No Value for &quot; ,  zGreenChk__c ) &amp; &quot; Region&quot;
&amp;
IF(ISBLANK ( Text( Program__c) ),  zRedX__c &amp; &quot; No Value for &quot;,  zGreenChk__c ) &amp;&quot; Program&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region/Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Screening1__c</fullName>
        <formula>IF(Text( Health_Status_Statement_Results__c )=&quot;Pass&quot;,  zGreenChk__c ,  zRedX__c ) 
&amp;
&quot;Health Status Results  &quot;
&amp;
 CASE(Text( Health_Status_Statement_Results_Other__c ), 
&quot;Pass&quot;, zGreenChk__c , 
&quot;Does Not Apply&quot;,  zCaution__c &amp; &quot; N/A is marked for&quot;, 
zRedX__c
) 

&amp;&quot; Health Status Results Other Members  &quot;
&amp;
br()
&amp;

 IF(text( Background_Check_Results__c )=&quot;Pass&quot;, zGreenChk__c ,  zRedX__c ) 

&amp;
&quot; Background Check Results &quot;
&amp;
 IF(text(  OIG_Results__c  )=&quot;Pass&quot;, zGreenChk__c ,  zRedX__c ) 
&amp;
&quot; OIG Results &quot;
&amp;
CASE(Text( Background_Check_Results_Other__c ), 
&quot;Pass&quot;, zGreenChk__c , 
&quot;Does Not Apply&quot;,  zCaution__c &amp; &quot; N/A is marked for&quot;, 
zRedX__c
) 

&amp;
&quot; Background check Other Members &quot;
&amp;
br()
&amp;


 IF(text( Pre_Service_Results__c )=&quot;Pass&quot;,  zGreenChk__c ,  zRedX__c) 
&amp;
&quot; Pre-Service Results&quot;
&amp;
IF(text(  Home_Study_Results__c  )=&quot;Pass&quot;,  zGreenChk__c ,  zRedX__c) 
&amp;
&quot; Home Study Results&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Screening - Core Milestones</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Screening2__c</fullName>
        <formula>IF(text(   Physical_House_Inspection__c   )=&quot;Pass&quot;,  zGreenChk__c ,  zRedX__c) 
&amp;
&quot; Physical House Inspection &quot;
&amp;
IF(text(    Fire_Safety_Check__c   )=&quot;Pass&quot;,  zGreenChk__c ,  zRedX__c) 
&amp;
&quot;Fire Safety Check &quot;
&amp;
CASE(Text( Pool_Water_Body_Assessment__c  ), 
&quot;Pass&quot;, zGreenChk__c , 
&quot;Does Not Apply&quot;,  zCaution__c &amp; &quot; N/A is marked for&quot;, 
zRedX__c
) 

 &amp;
&quot;Pool/Water Body Assessment&quot;
&amp;
br()
&amp;
IF(  All_Drivers_License_Received__c =True,    zGreenChk__c ,  zRedX__c) 
&amp;
&quot;  Drivers License &quot;
&amp;
IF(  All_DMV_Records_Received__c  =True,    zGreenChk__c ,  zRedX__c) 
&amp;
&quot;  DMV Records &quot;
&amp;
IF(  All_Auto_Registration_Received__c  =True,    zGreenChk__c ,  zRedX__c) 
&amp;
&quot;  Automobile Registration  &quot;
&amp;
IF( All_Auto_Insurance_Received__c =True,    zGreenChk__c ,  zRedX__c) 
&amp;
&quot;  Automobile Insurance &quot;
&amp;
br()
&amp;

IF(Text( References_Primary__c )=&quot;Approved&quot;,  zGreenChk__c ,  zRedX__c) 
&amp;
&quot; Primary References&quot;
&amp;
 CASE(Text( References_All_Other__c  ), 
&quot;Approved&quot;, zGreenChk__c , 
&quot;Does Not Apply&quot;,  zCaution__c &amp; &quot; N/A is marked for&quot;, 
zRedX__c
) 

&amp;
&quot; Other References&quot;
&amp;
br()
&amp;

IF( Home_Renter_Insurance__c=True,  zGreenChk__c ,  zRedX__c) 
&amp;
&quot; Home/Renter Insurance&quot;

&amp;
 CASE(Text( Pet_Vaccination_and_Licenses__c  ), 
&quot;Pass&quot;, zGreenChk__c , 
&quot;Does Not Apply&quot;,  zCaution__c &amp; &quot; N/A is marked for&quot;, 
zRedX__c
) 

&amp;
&quot; Pet Vaccination and Licenses&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Screening - Other Milestones</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routed_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Routed To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rpt_Closed_Days__c</fullName>
        <formula>IF ( OR(ISNULL(Closed_Date__c), NOT CONTAINS(TEXT(Status__c),&quot;Closed&quot;)), 0, Closed_Date__c  -  Date_of_Inquiry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rpt Closed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rpt_Closed__c</fullName>
        <formula>IF( OR (ISNULL( Closed_Date__c ), NOT CONTAINS(TEXT(Status__c),&quot;Closed&quot;)) ,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rpt Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rpt_Core_Reqs__c</fullName>
        <description>Count equals 1 if Inquiry Progress Percent is 100
Core requirements should be counted as 1 when each of the following fields all equal “Pass” 
·         Status Background check,  Status Pre-Service, Status Health Statement,  Status Home Study</description>
        <formula>IF ( TEXT(Status__c) = &quot;Mentor&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rpt Core Reqs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rpt_Inquiry__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rpt Inquiry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rpt_Mentor__c</fullName>
        <formula>IF(TEXT( Status__c )=&quot;Mentor&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rpt Mentor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rpt_Months_to_Approve__c</fullName>
        <description>Agreement Date - Inquiry Date</description>
        <formula>IF (NOT ISNULL( Provider_Agreement_Signature_Date__c  ),
( Provider_Agreement_Signature_Date__c  -  Date_of_Inquiry__c ) / 30, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rpt Months to Approve</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rpt_Months_to_Close__c</fullName>
        <description>Months to Close (Closed Date minus Inquiry Date)</description>
        <formula>IF (NOT ISNULL( Closed_Date__c  ),
( Closed_Date__c   -  Date_of_Inquiry__c ) / 30,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rpt Months to Close</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rpt_On_Hold_Days__c</fullName>
        <formula>IF ( OR(ISNULL(Closed_Date__c), NOT CONTAINS(TEXT(Status__c),&quot;On hold&quot;)), 0, Closed_Date__c  -  Date_of_Inquiry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rpt On Hold Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rpt_On_Hold__c</fullName>
        <formula>IF( OR (ISNULL( Closed_Date__c ), NOT CONTAINS(TEXT(Status__c),&quot;On hold&quot;)) ,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rpt On Hold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rpt_State_Program__c</fullName>
        <description>State Program</description>
        <formula>TEXT(Region__r.State__c)  &amp; &quot; - &quot; &amp;  TEXT(Program__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>State Program</inlineHelpText>
        <label>Rpt State/Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rpt_State__c</fullName>
        <description>Region-&gt; State</description>
        <formula>TEXT(Region__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rpt State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rpt_Status_30_Day__c</fullName>
        <formula>IF( TEXT(Status__c)  = &quot;30 Day&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rpt  Status 30 Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rpt_Status_7_Day__c</fullName>
        <formula>IF( TEXT(Status__c)  = &quot;7 Day&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rpt Status 7 Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rpt_Submitted_App__c</fullName>
        <formula>IF (ISNULL( Application_Received_Date__c ),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rpt Submitted App</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Screening_Milestone_Completed_Count__c</fullName>
        <formula>IF(Text( Health_Status_Statement_Results__c )=&quot;Pass&quot;, 1, 0)+ 
 IF(Text(  Health_Status_Statement_Results_Other__c  )=&quot;Pass&quot;, 1, 0)+ 
 IF(Text(  Background_Check_Results__c  )=&quot;Pass&quot;, 1, 0)+ 
 IF(Text(  Background_Check_Results_Other__c  )=&quot;Pass&quot;, 1, 0)+ 
 IF(Text(  OIG_Results__c  )=&quot;Pass&quot;, 1, 0)+ 
 IF(Text(  Pre_Service_Results__c  )=&quot;Pass&quot;, 1, 0) +


IF(Text(  Home_Study_Results__c  )=&quot;Pass&quot;, 1, 0)+ 
 IF(Text(  Physical_House_Inspection__c   )=&quot;Pass&quot;, 1, 0)+ 
 IF(Text(   Fire_Safety_Check__c   )=&quot;Pass&quot;, 1, 0)+ 
 IF(Text(   Pool_Water_Body_Assessment__c   )=&quot;Pass&quot;, 1, 0)+ 
 IF(Text(   References_All_Other__c  )=&quot;Approved&quot;, 1, 0)+ 
 IF(Text(   References_Primary__c   )=&quot;Approved&quot;, 1, 0)+
 IF(Text(   Pet_Vaccination_and_Licenses__c   )=&quot;Pass&quot;, 1, 0)+

 IF( All_Auto_Insurance_Received__c , 1, 0) +
 IF(  All_Auto_Registration_Received__c  , 1, 0) +
 IF(  All_DMV_Records_Received__c , 1, 0) +
 IF(  All_Drivers_License_Received__c  , 1, 0)+
 IF(   Home_Renter_Insurance__c   , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Screening Milestone Completed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Screening_Milestone_High_Count__c</fullName>
        <formula>13+
 IF(text( Background_Check_Results_Other__c )=&quot;does not apply&quot; , 0, 1)+ 
 IF(text( Health_Status_Statement_Results_Other__c )=&quot;does not apply&quot; , 0, 1)+ 
 IF(text( Pet_Vaccination_and_Licenses__c )=&quot;does Not Apply&quot; , 0, 1)+ 
 IF(text( Pool_Water_Body_Assessment__c )=&quot;does not apply&quot; , 0, 1)+ 
 IF(text( References_All_Other__c )=&quot;does not apply&quot; , 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Screening Milestone High Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Screening_Progress_Percent__c</fullName>
        <formula>Screening_Milestone_Completed_Count__c / Screening_Milestone_High_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Screening Progress %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Screening_Progress__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000002LpJ&quot;, &quot;P&quot;, 15,   Screening_Progress_Percent__c *250 )
&amp;
br()
&amp; 
IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000002LpI&quot;, &quot;P&quot;, 2, 250 )

&amp;br()&amp;
Text(Round(Screening_Progress_Percent__c,2)*100) &amp; &quot;%&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Screening Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Phone_Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Phone__c</fullName>
        <description>Second Phone</description>
        <label>Second Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sensitive_Personal_Information__c</fullName>
        <formula>&quot;Data in this section should be entered only after the Mentor is approved. &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(Sensitive Personal Info)</label>
        <type>Text</type>
    </fields>
</CustomObject>